# Powercoin

./: CMakeLists.txt  README.md  readme.md
src/: config.cpp  config.h  main.cpp
src/blockchain/: block.cpp  block.h  blockchain.cpp  blockchain.h  consensus.cpp  consensus.h  script.cpp  script.h  transaction.cpp  transaction.h  validation.cpp  validation.h
src/consensus/: mining.cpp  mining.h  pow.cpp  pow.h
src/crypto/: aes.cpp  aes.h  base58.cpp  base58.h  keys.cpp  keys.h  random.cpp  random.h  ripemd160.cpp  ripemd160.h  secp256k1.cpp  secp256k1.h  sha256.cpp  sha256.h
src/mining/: difficulty.cpp  difficulty.h  miner.cpp  miner.h  pow.cpp  pow.h  stratum.cpp  stratum.h
src/network/: dht.cpp  dht.h  handshake.cpp  handshake.h  messages.cpp  messages.h  node.cpp  node.h  p2p.cpp  p2p.h  sync.cpp  sync.h
src/wallet/: address.cpp  address.h  keystore.cpp  keystore.h  mnemonic.cpp  mnemonic.h  utxo.cpp  utxo.h  wallet.cpp  wallet.h
